--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ S3method(summary,VGMSFH)
 export(download_pretrained_vae)
 export(install_environment)
 export(load_environment)
+export(load_vae)
 export(train_vae)
 export(vgmsfh_numpyro)
 importFrom(ggplot2,geom_sf)
