--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ exportMethods(coef)
 exportMethods(confint)
 exportMethods(plot)
 exportMethods(summary)
+importFrom(dplyr,"%>%")
 importFrom(ggplot2,aes)
 importFrom(ggplot2,facet_wrap)
 importFrom(ggplot2,geom_sf)
