--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,8 @@ export(load_environment)
 export(load_vae)
 export(train_vae)
 export(vgmsfh_numpyro)
+exportClasses(Decoder)
+exportClasses(VGMSFH)
 exportMethods(coef)
 exportMethods(confint)
 exportMethods(plot)
