--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,5 +19,10 @@ importFrom(ggplot2,geom_sf)
 importFrom(ggplot2,ggplot)
 importFrom(ggplot2,scale_fill_viridis_c)
 importFrom(gridExtra,grid.arrange)
+importFrom(reticulate,install_python)
+importFrom(reticulate,py_config)
+importFrom(reticulate,py_install)
+importFrom(reticulate,source_python)
+importFrom(reticulate,use_virtualenv)
 importFrom(sf,st_read)
 importFrom(tidyr,pivot_longer)
