Add import py from reticulate

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,6 +20,7 @@ importFrom(ggplot2,ggplot)
 importFrom(ggplot2,scale_fill_viridis_c)
 importFrom(gridExtra,grid.arrange)
 importFrom(reticulate,install_python)
+importFrom(reticulate,py)
 importFrom(reticulate,py_config)
 importFrom(reticulate,py_install)
 importFrom(reticulate,source_python)
