--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,6 +19,8 @@ importFrom(ggplot2,geom_sf)
 importFrom(ggplot2,ggplot)
 importFrom(ggplot2,scale_fill_viridis_c)
 importFrom(gridExtra,grid.arrange)
+importFrom(methods,new)
+importFrom(methods,slot)
 importFrom(reticulate,install_python)
 importFrom(reticulate,py)
 importFrom(reticulate,py_config)
@@ -26,4 +28,10 @@ importFrom(reticulate,py_install)
 importFrom(reticulate,source_python)
 importFrom(reticulate,use_virtualenv)
 importFrom(sf,st_read)
+importFrom(stats,quantile)
+importFrom(stats,sd)
 importFrom(tidyr,pivot_longer)
+importFrom(utils,download.file)
+importFrom(utils,read.table)
+importFrom(utils,unzip)
+importFrom(utils,write.table)
