--- a/NAMESPACE
+++ b/NAMESPACE
@@ -27,6 +27,7 @@ importFrom(reticulate,py_config)
 importFrom(reticulate,py_install)
 importFrom(reticulate,source_python)
 importFrom(reticulate,use_virtualenv)
+importFrom(rlang,.data)
 importFrom(sf,st_read)
 importFrom(stats,quantile)
 importFrom(stats,sd)
