Update document for load_environment

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -26,6 +26,7 @@ importFrom(reticulate,py)
 importFrom(reticulate,py_config)
 importFrom(reticulate,py_install)
 importFrom(reticulate,source_python)
+importFrom(reticulate,use_condaenv)
 importFrom(reticulate,use_virtualenv)
 importFrom(rlang,.data)
 importFrom(sf,st_read)
